--- a/arxiv/2021_01_arxiv.html
+++ b/arxiv/2021_01_arxiv.html
@@ -211,7 +211,41 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.05794">https://arxiv.org/abs/2101.05794</a></span> Correlated interaction effects in three-dimensional semi-Dirac semimetal (Jing-Rong Wang)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.05230">https://arxiv.org/abs/2101.05230</a></span> Brief lectures on duality, integrability and deformations *</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.13383">https://arxiv.org/abs/2009.13383</a></span> Ising model as a U(1) Lattice Gauge Theory with a θ-term</p>
-<p class="p3"><a href="https://arxiv.org/abs/2101.05331">https://arxiv.org/abs/2101.05331</a><span class="s2"> The history of LHCb</span></p>
+<p class="p3"><a href="https://arxiv.org/abs/2101.05331">https://arxiv.org/abs/2101.05331</a><span class="s2"> The history of LHCb</span></p><br>
+<p class="p1">20210118</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.05842">https://arxiv.org/abs/2101.05842</a></span> Terahertz detection based on nonlinear Hall effect without magnetic field *** (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.06081">https://arxiv.org/abs/2101.06081</a></span> Linear and Nonlinear Optical Responses in Kitaev Spin Liquids ** (Masahiro Sato)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.06264">https://arxiv.org/abs/2101.06264</a></span> Bose Metal via Failed Insulator: A Novel Phase of Quantum Matter *****</p>
+<p class="p2"><br></p>
+<p class="p1">20200119</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.06697">https://arxiv.org/abs/2101.06697</a></span> Superfluid Density in Conventional Superconductors: From Clean to Strongly Disordered</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.07039">https://arxiv.org/abs/2101.07039</a></span> Optical phonon contribution to the thermal conductivity of a quantum paraelectric</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.07016">https://arxiv.org/abs/2101.07016</a></span> <span class="s2">𝑺𝑼</span>(<span class="s2">𝑵</span>) <span class="s3">→</span> <span class="s2">𝑺𝑼</span>(2) symmetry breaking in quantum antiferromagnets</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.07929">https://arxiv.org/abs/2007.07929</a></span> Measurement sequences for magic state distillation ** (Jeongwan Haah, Matthew B. Hastings)</p>
+<p class="p2"><br></p>
+<p class="p1">20210120</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.07262">https://arxiv.org/abs/2101.07262</a></span> A roadmap for bootstrapping gauge theories: decoupling operators of conformal field theories in d &gt; 2 dimensions *** (Yin-Chen He)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.06466">https://arxiv.org/abs/2011.06466</a></span> Combined Lorentz symmetry (G.E. Volovik)</p>
+<p class="p2"><br></p>
+<p class="p1">20210121</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.08230">https://arxiv.org/abs/2101.08230</a></span> Viscometry of electron fluids from symmetry **** (Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.07805">https://arxiv.org/abs/2101.07805</a></span> Stiefel liquids: possible non-Lagrangian quantum criticality from intertwined orders ***** (Liujun Zou, Yin-Chen He, Chong Wang)<br>
+<a href="https://arxiv.org/abs/2101.07807"><span class="s1">https://arxiv.org/abs/2101.07807</span></a> Continuum approach to real time dynamics of 1+1D gauge field theory: out of horizon correlations of the Schwinger model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.08176">https://arxiv.org/abs/2101.08176</a></span> Introduction to Normalizing Flows for Lattice Field Theory **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.07815">https://arxiv.org/abs/2101.07815</a></span> Presence versus absence of Two-Dimensional Fermi Surface Anomalies ***** (Sankar Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.07943">https://arxiv.org/abs/2101.07943</a></span> Charge-4e superconductivity from multi-component nematic pairing: Application to twisted bilayer graphene ***** (Rafael M. Fernandes, Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.07802">https://arxiv.org/abs/2101.07802</a></span> Know the enemy: 2D Fermi liquids ***** (Sankar Das Sarma)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2010.00607">https://arxiv.org/abs/2010.00607</a><span class="s4"> Gauging the Kitaev chain</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1907.09415">https://arxiv.org/abs/1907.09415</a></span> Quantum Computing: Lecture Notes *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.07884">https://arxiv.org/abs/2101.07884</a></span> The Quantum Field Theory on Which the Everyday World Supervenes *** (Sean M. Carroll)</p>
+<p class="p2"><br></p>
+<p class="p1">20210122</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.08737">https://arxiv.org/abs/2101.08737</a></span> KINETIC PROCESSES IN FERMI-LUTTINGER LIQUIDS</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.08354">https://arxiv.org/abs/2101.08354</a></span> Enhancing Generative Models via Quantum Correlations *** (J. Ignacio Cirac, Mikhail D. Lukin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.08708">https://arxiv.org/abs/2101.08708</a></span> Van der Waals Cascade in Supercritical Turbulence near a Critical Point **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.08343">https://arxiv.org/abs/2101.08343</a></span> ZN Symmetries, Anomalies, and the Modular Bootstrap *** (Ying-Hsuan Lin, Shu-Heng Shao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.08274">https://arxiv.org/abs/2101.08274</a></span> Filling anomaly for general 2D and 3D C4 symmetric lattices *** (Jennifer Cano)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.08772">https://arxiv.org/abs/2101.08772</a></span> Low energy effective theory of Fermion liquid and its mixed U (1) × Rd anomaly ***** (Xiao-Gang Wen)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
