--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ a:hover {text-decoration: underline; color: darkgray;}
 <a href="http://physics.kaist.ac.kr/">Department of Physics</a><br>
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
-pdf version of CV: <a href="20210109_SangEun_Han_Curriculum_Vitae">here (updated at 2021/01/09)</a>
+pdf version of CV: <a href="20210121_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2021/01/21)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -171,7 +171,7 @@ Articles related to my works:
 		<span class="cvperiod">March 2013 ~ August 2020</span>
 		</div>
 		<div class="cvitemcontent"> Doctor of Philosophy in Physics</div>
-		<div class="cvitemcontent"> Thesis Adviosr: Prof. Eun-Gook Moon</div>
+		<div class="cvitemcontent"> Thesis Adviosr: <a href="https://sites.google.com/view/egmoon">Prof. Eun-Gook Moon</a></div>
 		<div class="cvitemcontent"> Thesis: Renormalization group study on Strongly correlated system</div>
 		<!--<div class="cvitemcontent"> Cumulative GPA : 4.16/4.3</div>-->
 		</li><li>
@@ -264,7 +264,7 @@ Articles related to my works:
 		<span class="cvperiod"></span>
 		</div>
 		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, Junhyun Lee, Eun-Gook Moon<br>
-			<a href="https://journals.aps.org/prb/accepted/29074YfdC2c12169c7a0568291089b40abf85e9dc">Accepted for publication in Phy. Rev. B</a> (<a href="https://arxiv.org/abs/1911.01435">arXiv:1911.01435</a>)
+			<a href="https://doi.org/10.1103/PhysRevB.103.014435">Phys. Rev. B <b>103</b>, 014435</a> (<a href="https://arxiv.org/abs/1911.01435">arXiv:1911.01435</a>)
 		</li><li><div>
 		<span class="cvitem"> "Emergent Anisotropic Non-Fermi Liquid at a Topological Phase Transition in Three Dimensions" </span>
 		<span class="cvperiod"></span>
