--- a/arxiv/2021_01_arxiv.html
+++ b/arxiv/2021_01_arxiv.html
@@ -245,7 +245,45 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.08708">https://arxiv.org/abs/2101.08708</a></span> Van der Waals Cascade in Supercritical Turbulence near a Critical Point **</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.08343">https://arxiv.org/abs/2101.08343</a></span> ZN Symmetries, Anomalies, and the Modular Bootstrap *** (Ying-Hsuan Lin, Shu-Heng Shao)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.08274">https://arxiv.org/abs/2101.08274</a></span> Filling anomaly for general 2D and 3D C4 symmetric lattices *** (Jennifer Cano)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.08772">https://arxiv.org/abs/2101.08772</a></span> Low energy effective theory of Fermion liquid and its mixed U (1) × Rd anomaly ***** (Xiao-Gang Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.08772">https://arxiv.org/abs/2101.08772</a></span> Low energy effective theory of Fermion liquid and its mixed U (1) × Rd anomaly ***** (Xiao-Gang Wen)</p><br>
+<p class="p1">20210125</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.09274">https://arxiv.org/abs/2101.09274</a></span> Sub-dimensional topologies, indicators and higher order phases</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.08963">https://arxiv.org/abs/2101.08963</a></span> Non-unitary triplet superconductivity tuned by field-controlled magnetization –URhGe, UCoGe and UTe2– **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.08821">https://arxiv.org/abs/2101.08821</a></span> Unusual H-T phase diagram of CeRh2As2 - the role of staggered non-centrosymmetriciy ** (Manfred Sigrist)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.10058">https://arxiv.org/abs/2011.10058</a></span> Causality, Unitarity and Symmetry in Effective Field Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.06439">https://arxiv.org/abs/2101.06439</a></span> Axial UA(1) Anomaly: a New Mechanism to Generate Massless Bosons</p>
+<p class="p2"><br></p>
+<p class="p1">20210126</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10072">https://arxiv.org/abs/2006.10072</a></span> Periodically, Quasi-periodically, and Randomly Driven Conformal Field Theories: Part I ***** (Xueda Wen, Ruihua Fan, Ashvin Vishwanath, Yingfei Gu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.10299">https://arxiv.org/abs/2101.10299</a></span> Discovery of an insulating ferromagnetic phase of electrons in two dimensions *** (Kyung-Su Kim, Steven A. Kivelson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.09714">https://arxiv.org/abs/2101.09714</a></span> Nonlinear Quantum Electrodynamics in Dirac materials **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.08281">https://arxiv.org/abs/2101.08281</a></span> Accumulation of chiral hinge modes and its interplay with Weyl physics in a three-dimensional periodically driven lattice system **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.10018">https://arxiv.org/abs/2101.10018</a></span> Critical exponents from five-loop scalar theory renormalization near six-dimensions ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.09883">https://arxiv.org/abs/2101.09883</a></span> Antiferromagnetic state in κ-type molecular conductors: spin splitting and Mott gap</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.09820">https://arxiv.org/abs/2101.09820</a></span> Anomalous dimensions at large charge in d = 4 O(N) theory **</p>
+<p class="p2"><br></p>
+<p class="p1">20210127</p>
+<p class="p3"><a href="https://arxiv.org/abs/2101.10971">https://arxiv.org/abs/2101.10971</a><span class="s2"> The Loschmidt Index</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.10611">https://arxiv.org/abs/2101.10611</a></span> Doping Mott Insulator in Ising-Kondo Lattice: Strange metal and Mott Criticality ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.10541">https://arxiv.org/abs/2101.10541</a></span> Drifting Dirac monopole in Berry’s phase *** (Kazuo Fujikawa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.10332">https://arxiv.org/abs/2101.10332</a></span> Emergent moments in a Hund’s impurity *** (Piers Coleman)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.10335">https://arxiv.org/abs/2101.10335</a></span> Fractionalized quantum criticality in spin-orbital liquids from field theory beyond the leading order **** (Michael M. Scherer, Lukas Janssen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.10342">https://arxiv.org/abs/2101.10342</a></span> Universal Features of Higher-Form Symmetries at Phase Transitions ***** (Chao-Ming Jian, Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.10358">https://arxiv.org/abs/2101.10358</a></span> Scaling of disorder operator at (2 + 1)<span class="s3">𝑑</span> U(1) quantum criticality ***** (Meng Cheng, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.10762">https://arxiv.org/abs/2101.10762</a></span> Superfluid Quantum Criticality in Liquid 3He in Anisotropic Aerogel ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1406.5888">https://arxiv.org/abs/1406.5888</a></span> A hidden symmetry of conformally invariant Lagrangians</p>
+<p class="p2"><br></p>
+<p class="p1">20210128</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.11610">https://arxiv.org/abs/2101.11610</a></span> Phase Diagram of Triangular Lattice Quantum Ising Model under External Field (Yang Qi, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.11238">https://arxiv.org/abs/2101.11238</a></span> Page Curve from Non-Markovianity *** (Pengfei Zhang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.11609">https://arxiv.org/abs/2101.11609</a></span> Stability of a topological superconductor in two-dimensional space protected by time-reversal and reflection symmetries against contact interactions ***** (Shinsei Ryu, Akira Furusaki, Christopher Mudry)</p>
+<p class="p2"><br></p>
+<p class="p1">20210129</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.11638">https://arxiv.org/abs/2101.11638</a></span> Flag manifold sigma models: <i>Spin chains and integrable theories</i></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.12084">https://arxiv.org/abs/2101.12084</a></span> Phonon Self-Energy Effects in Migdal-Eliashberg Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.10466">https://arxiv.org/abs/2003.10466</a></span> Exotic Symmetries, Duality, and Fractons in 2 + 1-Dimensional Quantum Field Theory ***** (Nathan Seiberg, Shu-Heng Shao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10766">https://arxiv.org/abs/2006.10766</a></span> Critical Fermi surfaces in generic dimensions arising from transverse gauge field interactions **** (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.07991">https://arxiv.org/abs/2012.07991</a></span> Rotons in Anyon Superfluids (Dam Thanh Son)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
