--- a/arxiv/2021_02_arxiv.html
+++ b/arxiv/2021_02_arxiv.html
@@ -126,6 +126,31 @@ a:hover {text-decoration: underline; color: darkgray;}
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <p class="p1">20210201</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.12477/abs/">https://arxiv.org/abs/2101.12477/abs/</a></span> Magnetic higher-order nodal lines (Shengyuan A. Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.12234/abs/">https://arxiv.org/abs/2101.12234/abs/</a></span> Dual gauge theory formulation of planar quasicrystal elasticity and fractons ***</p>
+<p class="p2"><br></p>
+<p class="p1">20210202</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.00271/abs/">https://arxiv.org/abs/2102.00271/abs/</a></span> Green’s functions on a renormalized lattice: An improved method for the integer quantum Hall transition (Thomas Vojta)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.00907/abs/">https://arxiv.org/abs/2102.00907/abs/</a></span> Pure Gauge Spin-Orbit Couplings ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.00964/abs/">https://arxiv.org/abs/2102.00964/abs/</a></span> Classification of emergent Weyl spinors in multi - fermion systems ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.00014/abs/">https://arxiv.org/abs/2102.00014/abs/</a></span> Topological magnons for thermal Hall transport in frustrated magnets with bond-dependent interactions ***** (Emily Z. Zhang, Li Ern Chern, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.00019/abs/">https://arxiv.org/abs/2102.00019/abs/</a></span> Hamiltonian reconstruction as metric for variational studies **** (Eun-Ah Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.13989/abs/">https://arxiv.org/abs/2012.13989/abs/</a></span> A Note on Gauge Anomaly Cancellation in Effective Field Theories ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.05401/abs/">https://arxiv.org/abs/2003.05401/abs/</a></span> Correlated Disorder in the SYK2 model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.07805/abs/">https://arxiv.org/abs/2101.07805/abs/</a></span> Stiefel liquids: possible non-Lagrangian quantum criticality from intertwined orders ***** (Liujun Zou, Yin-Chen He, Chong Wang)</p>
+<p class="p2"><br></p>
+<p class="p1">20210203</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.01102/abs/">https://arxiv.org/abs/2102.01102/abs/</a></span> Gap generation and flat band catalysis in dice model with local interaction</p>
+<p class="p2"><br></p>
+<p class="p1">20210204</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.01705/abs/">https://arxiv.org/abs/2102.01705/abs/</a></span> Lifetimes of local excitations in disordered dipolar quantum systems (Rahul Nandkishore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.01700/abs/">https://arxiv.org/abs/2102.01700/abs/</a></span> Critical anomalous metals near superconductivity in models with random interactions (Subir Sachdev)</p>
+<p class="p2"><br></p>
+<p class="p1">20210205</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.02226/abs/">https://arxiv.org/abs/2102.02226/abs/</a></span> A new cubic Hall viscosity in three-dimensional topological semimetals (Barry Bradlyn)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.02722/abs/">https://arxiv.org/abs/2102.02722/abs/</a></span> N = 1 supersymmetric three-dimensional QED in the large-Nf limit and applications to super-graphene ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.02209/abs/">https://arxiv.org/abs/2102.02209/abs/</a></span> Interaction-driven Band Flattening and Correlated Phases in Twisted Bilayer Graphene ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.13383/abs/">https://arxiv.org/abs/2009.13383/abs/</a></span> Ising model as a U(1) Lattice Gauge Theory with a θ-term ****</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
