--- a/arxiv/2021_02_arxiv.html
+++ b/arxiv/2021_02_arxiv.html
@@ -150,7 +150,54 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.02226/abs/">https://arxiv.org/abs/2102.02226/abs/</a></span> A new cubic Hall viscosity in three-dimensional topological semimetals (Barry Bradlyn)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.02722/abs/">https://arxiv.org/abs/2102.02722/abs/</a></span> N = 1 supersymmetric three-dimensional QED in the large-Nf limit and applications to super-graphene ***</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.02209/abs/">https://arxiv.org/abs/2102.02209/abs/</a></span> Interaction-driven Band Flattening and Correlated Phases in Twisted Bilayer Graphene ****</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.13383/abs/">https://arxiv.org/abs/2009.13383/abs/</a></span> Ising model as a U(1) Lattice Gauge Theory with a θ-term ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.13383/abs/">https://arxiv.org/abs/2009.13383/abs/</a></span> Ising model as a U(1) Lattice Gauge Theory with a θ-term ****</p><br>
+<p class="p1">20210208</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.02822">https://arxiv.org/abs/2102.02822</a></span> Rare regions and avoided quantum criticality in disordered Weyl semimetals and superconductors (J. H. Pixley)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.03312">https://arxiv.org/abs/2102.03312</a></span> Emulating heavy fermions in twisted trilayer graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.02941">https://arxiv.org/abs/2102.02941</a></span> INVERTIBLE PHASES FOR MIXED SPATIAL SYMMETRIES AND THE FERMIONIC CRYSTALLINE EQUIVALENCE PRINCIPLE</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.02820">https://arxiv.org/abs/2102.02820</a></span> Charge-4e superconductivity from nematic superconductors in 2D and 3D ***** (Shao-Kai Jian, Hong Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.05725">https://arxiv.org/abs/2002.05725</a></span> Many-Body Chaos in the Sachdev-Ye-Kitaev Model ****</p>
+<p class="p2"><a href="https://arxiv.org/abs/2102.02817">https://arxiv.org/abs/2102.02817</a><span class="s2"> FINITE SYMMETRY GROUPS IN PHYSICS</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.08543">https://arxiv.org/abs/2012.08543</a></span> Quantum phases of two-dimensional Z2 gauge theory coupled to single-component fermion matter *** (Frank Pollmann)</p>
+<p class="p3"><br></p>
+<p class="p1">20210209</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.03900">https://arxiv.org/abs/2102.03900</a></span> Controlling unconventional superconductivity in artificially engineered f-electron Kondo superlattices *** (Yuji Matsuda)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.04371">https://arxiv.org/abs/2102.04371</a></span> Chiral Anomaly in interacting Condensed Matter Systems *** (Anton A. Burkov, Victor Galitski)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.04444">https://arxiv.org/abs/2102.04444</a></span> Interplay between superconductivity and non-Fermi liquid at a quantum-critical point in a metal. V. The γ model and its phase diagram. The case γ = 2. ***** (Yi-Ming Wu, Artem Abanov, Andrey V. Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.02817">https://arxiv.org/abs/2102.02817</a></span> FINITE SYMMETRY GROUPS IN PHYSICS **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.04008">https://arxiv.org/abs/2102.04008</a></span> Discovering conservation laws from trajectories via machine learning (Seungwoong Ha, Hawoong Jeong)<br>
+</p>
+<p class="p1">20210210</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.04479">https://arxiv.org/abs/2102.04479</a></span> Open Momentum Space Method for Hofstadter Butterfly and the Quantized Lorentz Susceptibility ** (B. Andrei Bernevig)<br>
+<a href="https://arxiv.org/abs/2102.04470"><span class="s1">https://arxiv.org/abs/2102.04470</span></a> Band geometry from position-momentum duality at topological band crossings</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.04665">https://arxiv.org/abs/2102.04665</a></span> Zeros of Green Functions in Topological Insulators</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.04609">https://arxiv.org/abs/2102.04609</a></span> Nonequilibrium dynamics in deconfined quantum critical point revealed by imaginary-time evolution *** (Shao-Kai Jian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.05029">https://arxiv.org/abs/2102.05029</a></span> Schwinger-Keldysh path integral for the quantum harmonic oscillator</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.04768">https://arxiv.org/abs/2102.04768</a></span> Supersymmetric quantum field theory with exotic symmetry in 3 + 1 dimensions and fermionic fracton phases *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.04885">https://arxiv.org/abs/2102.04885</a></span> Monopole hierarchy in transitions out of a Dirac spin liquid **** (William Witczak-Krempa)</p>
+<p class="p2"><a href="https://arxiv.org/abs/2006.12525">https://arxiv.org/abs/2006.12525</a><span class="s2"> Webs of integrable theories</span></p>
+<p class="p2"><a href="https://arxiv.org/abs/2010.08810">https://arxiv.org/abs/2010.08810</a><span class="s2"> Is N = 2 Large? **</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.04842">https://arxiv.org/abs/2102.04842</a></span> Schro ̈dinger’s “What is Life?” at 75</p>
+<p class="p3"><br></p>
+<p class="p1">20210211</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.05059">https://arxiv.org/abs/2102.05059</a></span> Universal non-Hermitian skin effect in two and higher dimensions *** (Chen Fang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.05052">https://arxiv.org/abs/2102.05052</a></span> Non-Landau Fermi Liquid induced by Bose Metal ***** (SangEun Han, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.05060">https://arxiv.org/abs/2102.05060</a></span> Antiferromagnetism induced by electron-phonon-coupling *** (Hong Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.05247">https://arxiv.org/abs/2102.05247</a></span> Explicit forms of zero modes in symmetric interacting Kitaev chain without and with dimerization</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.00023">https://arxiv.org/abs/2101.00023</a></span> Bootstrapping BPS spectra of 5d/6d field theories (Ki-Hong Lee)</p>
+<p class="p3"><br></p>
+<p class="p1">20210212</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.06207">https://arxiv.org/abs/2102.06207</a></span> Quantized non-Abelian, Berry’s flux and higher-order topology of Na3Bi ** (Shouvik Sur, Pallab Goswami)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.05661">https://arxiv.org/abs/2102.05661</a></span> Does filling-dependent band renormalization aid pairing in twisted bilayer graphene? *** (Debanjan Chowdhury)</p>
+<p class="p2"><a href="https://arxiv.org/abs/2102.05677">https://arxiv.org/abs/2102.05677</a><span class="s2"> Measuring Topological Order **</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.06201">https://arxiv.org/abs/2102.06201</a></span> TSTG I: Single-Particle and Many-Body Hamiltonians and Hidden Non-local Symmetries of Trilayer Moiré Systems with and without Displacement Field ** (B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.05659">https://arxiv.org/abs/2102.05659</a></span> Screening, Friedel oscillations, RKKY interaction, and Drude transport in anisotropic 2D systems ** (Seongjin Ahn, S. Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.05667">https://arxiv.org/abs/2102.05667</a></span> Geometric response and disclination-induced skin effects in non-Hermitian systems (Taylor L. Hughes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.06189">https://arxiv.org/abs/2102.06189</a></span> Hidden phases born of a quantum spin liquid: Application to pyrochlore spin ice **** (Hyeok-Jun Yang, Nic Shannon, SungBin Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.05664">https://arxiv.org/abs/2102.05664</a></span> Topological Field Theory with Haagerup Symmetry **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.06158">https://arxiv.org/abs/2102.06158</a></span> Phase-fluctuation Induced Time-Reversal Symmetry Breaking Normal State *** (Yi-Zhuang You, Congjun Wu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.05687">https://arxiv.org/abs/2102.05687</a></span> Traversable wormhole in coupled SYK models with imbalanced interactions **** (Timothy H. Hsieh, Marcel Franz)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.05689">https://arxiv.org/abs/2102.05689</a></span> Disorder upon disorder: localization effects in the Kitaev spin liquid *** (Natalia B. Perkins)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
