--- a/arxiv/2021_02_arxiv.html
+++ b/arxiv/2021_02_arxiv.html
@@ -126,31 +126,31 @@ a:hover {text-decoration: underline; color: darkgray;}
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <p class="p1">20210201</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.12477/abs/">https://arxiv.org/abs/2101.12477/abs/</a></span> Magnetic higher-order nodal lines (Shengyuan A. Yang)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.12234/abs/">https://arxiv.org/abs/2101.12234/abs/</a></span> Dual gauge theory formulation of planar quasicrystal elasticity and fractons ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.12477">https://arxiv.org/abs/2101.12477</a></span> Magnetic higher-order nodal lines (Shengyuan A. Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.12234">https://arxiv.org/abs/2101.12234</a></span> Dual gauge theory formulation of planar quasicrystal elasticity and fractons ***</p>
 <p class="p2"><br></p>
 <p class="p1">20210202</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.00271/abs/">https://arxiv.org/abs/2102.00271/abs/</a></span> Green’s functions on a renormalized lattice: An improved method for the integer quantum Hall transition (Thomas Vojta)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.00907/abs/">https://arxiv.org/abs/2102.00907/abs/</a></span> Pure Gauge Spin-Orbit Couplings ***</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.00964/abs/">https://arxiv.org/abs/2102.00964/abs/</a></span> Classification of emergent Weyl spinors in multi - fermion systems ****</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.00014/abs/">https://arxiv.org/abs/2102.00014/abs/</a></span> Topological magnons for thermal Hall transport in frustrated magnets with bond-dependent interactions ***** (Emily Z. Zhang, Li Ern Chern, Yong Baek Kim)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.00019/abs/">https://arxiv.org/abs/2102.00019/abs/</a></span> Hamiltonian reconstruction as metric for variational studies **** (Eun-Ah Kim)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.13989/abs/">https://arxiv.org/abs/2012.13989/abs/</a></span> A Note on Gauge Anomaly Cancellation in Effective Field Theories ***</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.05401/abs/">https://arxiv.org/abs/2003.05401/abs/</a></span> Correlated Disorder in the SYK2 model</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.07805/abs/">https://arxiv.org/abs/2101.07805/abs/</a></span> Stiefel liquids: possible non-Lagrangian quantum criticality from intertwined orders ***** (Liujun Zou, Yin-Chen He, Chong Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.00271">https://arxiv.org/abs/2102.00271</a></span> Green’s functions on a renormalized lattice: An improved method for the integer quantum Hall transition (Thomas Vojta)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.00907">https://arxiv.org/abs/2102.00907</a></span> Pure Gauge Spin-Orbit Couplings ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.00964">https://arxiv.org/abs/2102.00964</a></span> Classification of emergent Weyl spinors in multi - fermion systems ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.00014">https://arxiv.org/abs/2102.00014</a></span> Topological magnons for thermal Hall transport in frustrated magnets with bond-dependent interactions ***** (Emily Z. Zhang, Li Ern Chern, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.00019">https://arxiv.org/abs/2102.00019</a></span> Hamiltonian reconstruction as metric for variational studies **** (Eun-Ah Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.13989">https://arxiv.org/abs/2012.13989</a></span> A Note on Gauge Anomaly Cancellation in Effective Field Theories ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.05401">https://arxiv.org/abs/2003.05401</a></span> Correlated Disorder in the SYK2 model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.07805">https://arxiv.org/abs/2101.07805</a></span> Stiefel liquids: possible non-Lagrangian quantum criticality from intertwined orders ***** (Liujun Zou, Yin-Chen He, Chong Wang)</p>
 <p class="p2"><br></p>
 <p class="p1">20210203</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.01102/abs/">https://arxiv.org/abs/2102.01102/abs/</a></span> Gap generation and flat band catalysis in dice model with local interaction</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.01102">https://arxiv.org/abs/2102.01102</a></span> Gap generation and flat band catalysis in dice model with local interaction</p>
 <p class="p2"><br></p>
 <p class="p1">20210204</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.01705/abs/">https://arxiv.org/abs/2102.01705/abs/</a></span> Lifetimes of local excitations in disordered dipolar quantum systems (Rahul Nandkishore)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.01700/abs/">https://arxiv.org/abs/2102.01700/abs/</a></span> Critical anomalous metals near superconductivity in models with random interactions (Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.01705">https://arxiv.org/abs/2102.01705</a></span> Lifetimes of local excitations in disordered dipolar quantum systems (Rahul Nandkishore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.01700">https://arxiv.org/abs/2102.01700</a></span> Critical anomalous metals near superconductivity in models with random interactions (Subir Sachdev)</p>
 <p class="p2"><br></p>
 <p class="p1">20210205</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.02226/abs/">https://arxiv.org/abs/2102.02226/abs/</a></span> A new cubic Hall viscosity in three-dimensional topological semimetals (Barry Bradlyn)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.02722/abs/">https://arxiv.org/abs/2102.02722/abs/</a></span> N = 1 supersymmetric three-dimensional QED in the large-Nf limit and applications to super-graphene ***</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.02209/abs/">https://arxiv.org/abs/2102.02209/abs/</a></span> Interaction-driven Band Flattening and Correlated Phases in Twisted Bilayer Graphene ****</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.13383/abs/">https://arxiv.org/abs/2009.13383/abs/</a></span> Ising model as a U(1) Lattice Gauge Theory with a θ-term ****</p><br>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.02226">https://arxiv.org/abs/2102.02226</a></span> A new cubic Hall viscosity in three-dimensional topological semimetals (Barry Bradlyn)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.02722">https://arxiv.org/abs/2102.02722</a></span> N = 1 supersymmetric three-dimensional QED in the large-Nf limit and applications to super-graphene ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.02209">https://arxiv.org/abs/2102.02209</a></span> Interaction-driven Band Flattening and Correlated Phases in Twisted Bilayer Graphene ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.13383">https://arxiv.org/abs/2009.13383</a></span> Ising model as a U(1) Lattice Gauge Theory with a θ-term ****</p><br>
 <p class="p1">20210208</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.02822">https://arxiv.org/abs/2102.02822</a></span> Rare regions and avoided quantum criticality in disordered Weyl semimetals and superconductors (J. H. Pixley)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.03312">https://arxiv.org/abs/2102.03312</a></span> Emulating heavy fermions in twisted trilayer graphene</p>
@@ -197,7 +197,34 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.05664">https://arxiv.org/abs/2102.05664</a></span> Topological Field Theory with Haagerup Symmetry **</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.06158">https://arxiv.org/abs/2102.06158</a></span> Phase-fluctuation Induced Time-Reversal Symmetry Breaking Normal State *** (Yi-Zhuang You, Congjun Wu)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.05687">https://arxiv.org/abs/2102.05687</a></span> Traversable wormhole in coupled SYK models with imbalanced interactions **** (Timothy H. Hsieh, Marcel Franz)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.05689">https://arxiv.org/abs/2102.05689</a></span> Disorder upon disorder: localization effects in the Kitaev spin liquid *** (Natalia B. Perkins)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.05689">https://arxiv.org/abs/2102.05689</a></span> Disorder upon disorder: localization effects in the Kitaev spin liquid *** (Natalia B. Perkins)</p><br>
+<p class="p1">20210215</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.06223">https://arxiv.org/abs/2102.06223</a></span> Cornering the universal shape of fluctuations *** (William Witczak-Krempa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.06647">https://arxiv.org/abs/2102.06647</a></span> Non-local reparametrization action in coupled Sachdev–Ye–Kitaev models *** (Alexey Milekhin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.06651">https://arxiv.org/abs/2102.06651</a></span> Coupled Sachdev–Ye–Kitaev models without Schwartzian dominance *** (Alexey Milekhin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.06430">https://arxiv.org/abs/2102.06430</a></span> Topological Thermal Hall Effect Induced by Magnetic Skyrmions (Hyun-Yong Lee, Jung Hoon Han)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.04768">https://arxiv.org/abs/2102.04768</a></span> Supersymmetric quantum field theory with exotic symmetry in 3 + 1 dimensions and fermionic fracton phases ***</p>
+<p class="p2"><br></p>
+<p class="p1">20210216</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.07676">https://arxiv.org/abs/2102.07676</a></span> Symmetry-based approach to nodal structures: Unification of compatibility relations and point-node classifications **** (Ken Shiozaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.07613">https://arxiv.org/abs/2102.07613</a></span> Emission of Spin-correlated Matter-wave Jets from Spinor Bose-Einstein Condensates *** (Kyungtae Kim, Soonwon Choi, Jae-yoon Choi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.07377">https://arxiv.org/abs/2102.07377</a></span> Anomalous dimensions of monopole operators in scalar QED3 with Chern-Simons term</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.07063">https://arxiv.org/abs/2102.07063</a></span> The Relativistic Spherical Top as a Massive Twistor *** (Jung-Wook Kim, Sangmin Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.07672">https://arxiv.org/abs/2102.07672</a></span> Orthogonal Quantum Many-body Scars ** (Johannes Knolle)</p>
+<p class="p2"><br></p>
+<p class="p1">20210217</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.08091">https://arxiv.org/abs/2102.08091</a></span> Metamagnetic phase transition in ferromagnetic superconductor URhGe</p>
+<p class="p2"><br></p>
+<p class="p1">20210218</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.08398">https://arxiv.org/abs/2102.08398</a></span> Critical exponents for higher order phase transitions: Landau theory and RG flow **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.08389">https://arxiv.org/abs/2102.08389</a></span> Lieb-Schultz-Mattis type theorems for Majorana models with discrete symmetries **** (Apoorv Tiwari, Christopher Mudry)</p>
+<p class="p2"><br></p>
+<p class="p1">20210219</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.09164">https://arxiv.org/abs/2102.09164</a></span> Symmetry enriched phases of quantum circuits ** (Soonwon Choi, Ehud Altman)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.08967">https://arxiv.org/abs/2102.08967</a></span> Quotient symmetry protected topological phenomena (Frank Pollmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.08953">https://arxiv.org/abs/2102.08953</a></span> Topological Goldstone phases of matter ***** (Dominic V. Else)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.09272">https://arxiv.org/abs/2102.09272</a></span> Infinity scatter infinity: Infinite critical boson non-Fermi liquid ***** (Gang Chen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.09555">https://arxiv.org/abs/2102.09555</a></span> Hybrid Fracton Phases: Parent Orders for Liquid and Non-Liquid Quantum Phases ****</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
